# The-coffee-courier-robot

./: .gitignore  CMakeLists.txt  README.md  UseCase.puml  decodeQRcode.cpp  main.cpp  server.cpp
client/: main.cpp  robot.cpp  robot.py
docs/diagrams/: ConceptualModel.puml
server/: decodeQRcode.cpp  decodeQRcode.h  server.cpp
test/: CMakeLists.txt
